# anime-calendar-v2

./: .gitignore  BRAND.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_PRINCIPLES.md  FOUNDATION.md  LICENSE  MISSION.md  PROJECT_CHARTER.md  README.md  RELEASE_PROCESS.md  ROADMAP.md  SETUP_WINDOWS.md  TECHNICAL_DEBT.md  UPGRADE_V0.6.1.md  UPGRADE_V0.6.2.md  UPGRADE_V0.6.3.md  UPGRADE_V0.6.4.md  UPGRADE_V0.6.5.md  UPGRADE_V0.7.0.md  UPGRADE_V0.7.1.md  config.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  EXPERIENCE_PLATFORM.md  IDENTITY_AND_PERSISTENCE.md  PERSONALIZATION.md  PERSONAL_API.md  PERSONAL_CALENDARS.md  RELEASE_INTELLIGENCE.md  STREAMING_KNOWLEDGE.md  WATCHLISTS_AND_LIBRARY.md
docs/adr/: 0000-template.md  0001-generic-release-model.md  (+9 more)
supabase/: README.md
tests/: test_confidence_engine.py  test_event_bus.py  test_event_formatter.py  test_experience_models.py  test_ics_builder.py  test_library.py  test_library_repository.py  test_library_serialization.py  test_models.py  test_personal_api.py  test_personal_calendar_engine.py  test_personal_calendar_repository.py  test_personal_calendar_serialization.py  test_personalization_engine.py  test_personalization_models.py  test_plugins_notifications.py  test_quality_report.py  test_release_all_day_semantics.py  test_release_audit.py  test_release_diagnostics.py  test_release_inspector.py  test_release_intelligence.py  test_release_rules.py  test_release_stats.py  test_streaming_resolver.py  test_supabase_auth.py  test_supabase_config.py  test_supabase_repositories.py  test_supabase_serialization.py  test_transformer.py  test_transformer_timezone.py  test_widget_platform.py
tools/: apply_quality_report.py
web/: package-lock.json
(+59 files in other folders)
