[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anime-calendar-v2"
version = "0.6.4"
description = "Generate streaming-aware Apple Calendar feeds for episodes, movies, OVAs, ONAs, and specials."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "icalendar>=6.1,<7",
  "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.12,<1",
]

[project.scripts]
anime-calendar = "anime_calendar.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"anime_calendar.knowledge" = ["*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
